# pokers

./: .gitignore  Cargo.toml  README.md  TESTING.md  WEBSOCKET_SERVER.md  documentation.md  nohup.out  play.py  pokers.pyi  pyproject.toml  run_server.sh  simple_test_server.py  test_requirements.txt  test_server.sh  test_websocket_server.py
.github/workflows/: CI.yml
logs/deepcfr_gto_preflop_batch/: events.out.tfevents.1753755497.l2.640282.0  events.out.tfevents.1753755594.l2.691224.0  events.out.tfevents.1753755696.l2.744786.0
logs/deepcfr_selfplay_batch/: events.out.tfevents.1753870552.l2.1572733.0  events.out.tfevents.1753873585.l2.3166319.0  events.out.tfevents.1753874545.l2.3865958.0  events.out.tfevents.1753874582.l2.3885912.0
src/: PokerEnv_notorch.cpp  game_logic.rs  game_logic_fsm.rs  game_logic_new.rs  game_logic_old.rs  game_server.rs  lib.rs  main.rs  parallel.rs  state.rs  visualization.rs  websocket_server.rs
src/state/: action.rs  card.rs  stage.rs
tests/: test_game_logic.py  test_parallel.py
