[package]
name = "pokers"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pokers"
crate-type = ["cdylib"]

# Binary for WebSocket server
[[bin]]
name = "websocket_server"
path = "src/main.rs"
required-features = ["websocket"]

[features]
default = []
websocket = ["tokio", "tokio-tungstenite", "tungstenite", "futures-util", "serde", "serde_json", "uuid", "tracing", "tracing-subscriber"]

[dependencies]
pyo3 = "0.18.3"
rand = "0.8.4"
strum = "0.24"
strum_macros = "0.24"
rayon = "1.7"
itertools = "0.10.5"
poker = "0.7.0"
# WebSocket and server dependencies (optional)
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"
